--- a/static/scss/race.scss
+++ b/static/scss/race.scss
@@ -1,17 +1,24 @@
 #timer div {
-	background-color: #000000;
-	color: #ffffff;
-	width: 100px;
-	height: 105px;
-	border-radius: 5px;
-	font-size: 35px;
-	font-weight: 700;
-	margin-left: 10px;
-	margin-right: 10px;
- }
- #timer div span {
-	display: block;
-	margin-top: -2px;
-	font-size: 15px;
-	font-weight: 500;
- }
+  background-color: #000000;
+  color: #ffffff;
+  width: 100px;
+  height: 105px;
+  border-radius: 5px;
+  font-size: 35px;
+  font-weight: 700;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+#timer div span {
+  display: block;
+  margin-top: -2px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+#car {
+  position: absolute;
+  top: 260%;
+  width: 300px;
+  height: auto;
+}
