--- a/templates/types.html
+++ b/templates/types.html
@@ -1,34 +1,33 @@
-{% extends 'base.html' %}
-{% load render_bundle from webpack_loader %} {% load staticfiles %}
-{% load crispy_forms_tags %}
-
-{% block content %}
-
+{% extends 'base.html' %} {% load render_bundle from webpack_loader %} {% load
+staticfiles %} {% load crispy_forms_tags %} {% block content %}
 
 <div class="container">
-    <div class="d-flex justify-content-center">
-        <h1>Typowanie</h1>
-    </div>
-    <div class="d-flex justify-content-center">
-        <form method="POST">
-            {% csrf_token %}
-            {{ form | crispy }}
-            <button id=submitbutton type="submit">Wyślij</button>
-            <script>
-                var button = document.getElementById("submitbutton");
-                var race = "{{ next_race.race|date:'Y-m-d H:i' }}";
-                var race_day = new Date(race);
-                var now = new Date();
-                if (race_day.getMonth() == now.getMonth() && race_day.getDate() == now.getDate()) {
-                    button.disabled = true;
-                }
-                else {
-                    button.disabled = false;
-                }
-            </script>
-        </form>
-        {{ next_race }}
-    </div>
+  <div class="d-flex justify-content-center">
+    <h3 class="my-5 pt-4">
+      Wytypuj top 3 najlepszych kierowców w nadchodzącym wyścigu {{ next_race }}
+    </h1>
+  </div>
+
+  <div class="d-flex justify-content-center">
+    <form method="POST">
+      {% csrf_token %} {{ form | crispy }}
+      <button class="btn btn-danger" id="submitbutton" type="submit">Wyślij</button>
+      <script>
+        var button = document.getElementById("submitbutton");
+        var race = "{{ next_race.race|date:'Y-m-d H:i' }}";
+        var race_day = new Date(race);
+        var now = new Date();
+        if (
+          race_day.getMonth() == now.getMonth() &&
+          race_day.getDate() == now.getDate()
+        ) {
+          button.disabled = true;
+        } else {
+          button.disabled = false;
+        }
+      </script>
+    </form>
+  </div>
 </div>
 
 {% endblock %}
