--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %} {% load render_bundle from webpack_loader %} {% load
-staticfiles %} {% block content %}
+{% extends "base.html" %} {% load render_bundle from webpack_loader %}
+ {% load staticfiles %} {% load crispy_forms_tags %}
+  {% block content %}
 <h2 class="containter d-flex justify-content-center my-5">Kontakt</h2>
 {% if messages %} {% for message in messages %}
 
@@ -9,7 +10,7 @@ staticfiles %} {% block content %}
 {% endfor %} {% endif %}
 <div class="d-flex justify-content-center">
   <form method="post">
-    {% csrf_token %} {{ form.as_p }} 
+    {% csrf_token %} {{ form | crispy }} 
     <input type="submit" class=" btn
     btn-danger float-right" value="Wyślij" />
   </form>
