--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,9 +26,26 @@
           >Home <span class="sr-only">(current)</span></a
         >
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/classification">Klasyfikacja</a>
+ 
+<li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          id="navbarDropdown"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Klasyfikacja
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/classification">Kierowców</a>
+          <a class="dropdown-item" href="/team_classification">Zespołów</a>
       </li>
+
+
+
+
         <li class="nav-item">
         <a class="nav-link" href="/results">Wyniki</a>
       </li>
