--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
               {{ user_update|crispy }}
           </fieldset>
           <div class="form-group">
-              <button class="btn btn-outline-info" type="submit">Aktualizuj</button>
+              <button class="btn btn-danger" type="submit">Aktualizuj</button>
           </div>
       </form>
     </div>
