--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
                 <form method="POST">
                     {% csrf_token %}
                     {{ form | crispy }}
-                    <button type="submit">Zaloguj</button>
+                    <button class="btn btn-danger" type="submit">Zaloguj</button>
                     <small class="text-muted">
                         Nie masz konta? <a class="ml-2" href="{% url 'register' %}">Zarejestruj się!</a>
                 </form>
