--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
   <form method="POST">
     {% csrf_token %}
     {{ form | crispy }}
-    <button type="submit">Zarejestruj</button>
+    <button class="btn btn-danger" type="submit">Zarejestruj</button>
   </form>
   </div>
 </div> 
