--- a/templates/types.html
+++ b/templates/types.html
@@ -11,7 +11,7 @@ staticfiles %} {% load crispy_forms_tags %} {% block content %}
   <div class="d-flex justify-content-center">
     <form method="POST">
       {% csrf_token %} {{ form | crispy }}
-      <button class="btn btn-danger" id="submitbutton" type="submit">Wyślij</button>
+      <button class="btn btn-danger" id="submit" type="submit">Wyślij</button>
       <script>
         var button = document.getElementById("submitbutton");
         var race = "{{ next_race.race|date:'Y-m-d H:i' }}";
