Types history added

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -101,6 +101,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/profile">Ustawienia konta</a>
+          <a class="dropdown-item" href="/types_history">Historia typów</a>
           <a class="dropdown-item" href="/logout">Wyloguj</a>
       </li>
    
