--- a/templates/results.html
+++ b/templates/results.html
@@ -55,7 +55,7 @@
             <div class="mt-5 pt-5 col-sm">
                 <h1 class="d-flex justify-content-center mt-5 pt-5">Wyniki</h1>
                 {{ form | crispy }}
-                <table class="table css-serial">
+                <table style=" box-shadow: 0 0 10px rgba(0, 0, 0, 0.438);" class="table css-serial">
                   <thead>
                     <tr>
                       <th>Pozycja</th>
