--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -41,7 +41,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/classification">Kierowców</a>
-          <a class="dropdown-item" href="/team_classification">Zespołów</a>
+          <a class="dropdown-item" href="/team_classification">Konstruktorów</a>
       </li>
 
 
