--- a/templates/team_classification.html
+++ b/templates/team_classification.html
@@ -4,8 +4,9 @@ staticfiles %} {% load crispy_forms_tags %} {% block content %}
   <div class="row">
 
 
-    <div class="col-sm mx-5">
-      <h1 class="d-flex justify-content-center mb-5">Zespoły</h1>
+    <div class="col-sm-8 mx-auto">
+      <h1 class="d-flex justify-content-center mb-5">Zespoły <span class="h6"> <i class="fa fa-question-circle" aria-hidden="true" type="button"data-container="body" data-toggle="popover" data-placement="right" data-content="W celu uzyskania wiecej informacji o danym zespole, naciśnij jego nazwę w tabeli.">
+</i> </span></h1>
       <table class="table table-bordered css-serial">
         <thead>
           <tr>
