--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -128,24 +128,43 @@ border-color: black;
 #submitbutton 
 {
   position: absolute;
-  top: 60%;
-  right: 25%;
+  top: 70%;
+  right: 47%;
   z-index: 20000;
 
 }
-body > div.container > div:nth-child(2) > form > select {
-  width: 400px;
+body > div.container > div:nth-child(2) > form > div > div:nth-child(1) > select {
+  width: 500px !important;
   height: auto;
-  margin-left: 5%;
-  margin-top: 2rem;
   font-size: 20px;
+  background-color: #e107001c;
+}
+body > b > b > div > div:nth-child(2) > form > div > div:nth-child(1) > select {
+  width: 500px !important;
+  height: auto;
+  font-size: 20px;
+  background-color: #e107001c;
+
 }
 
 #mydiv > select {
-  width: 400px;
+  width: 500px;
   height: auto;
-  margin-left: 5%;
-  margin-top: 2rem;
   font-size:20px;
+  background-color: #e107001c;
 
+}
+.table {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.438);
+}
+
+.MuiDataGrid-root    {
+  font-size: 18px;
+  color: black;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.438);
+}
+  
+.MuiDataGrid-colCellTitle {
+  color: #e10600;
+  font-weight: 700;
 }
