--- a/templates/classification.html
+++ b/templates/classification.html
@@ -2,9 +2,10 @@
 staticfiles %} {% load crispy_forms_tags %} {% block content %}
 <div class="container pt-5">
   <div class="row">
-    <div class="col-sm mx-5">
-      <h1 class="d-flex justify-content-center mb-5">Kierowcy</h1>
-      <table class="table table-bordered css-serial">
+    <div class="col-sm-8 mx-auto">
+      <h1 class="d-flex justify-content-center mb-5">Kierowcy <span class="h6"> <i class="fa fa-question-circle" aria-hidden="true" type="button"data-container="body" data-toggle="popover" data-placement="right" data-content="W celu uzyskania wiecej informacji o danym kierowcy, naciśnij jego imię i naziwsko w tabeli.">
+</i> </span></h1>
+      <table style ="font-size: 20px"class="table table-bordered css-serial">
         <thead>
           <tr>
             <th>Kierowca</th>
