--- a/templates/driver.html
+++ b/templates/driver.html
@@ -4,7 +4,7 @@ staticfiles %} {% load crispy_forms_tags %} {% block content %}
     <div class="row">
         <div class="col-sm mx-5">
             <h1 class="d-flex justify-content-center mb-5">{{ Driver }}</h1>
-            <table class="table table-bordered css-serial">
+            <table id="driver_table" class="table table-bordered css-serial">
                 <thead>
                     <tr>
                         <th>Kierowca</th>
