--- a/templates/login.html
+++ b/templates/login.html
@@ -6,15 +6,17 @@
 
 {% block content %}
     <body>
-    <div class="container">
-        <h1>Logowanie</h1>    
-        <div class="d-flex justify-content-left">
+    <div class=" mt-5 container">
+            <div class="d-flex justify-content-center">
+        <h1 class="my-5">Logowanie</h1>    
+        </div>
+        <div class="d-flex justify-content-center">
                 <form method="POST">
                     {% csrf_token %}
                     {{ form | crispy }}
                     <button class="btn btn-danger" type="submit">Zaloguj</button>
-                    <small class="text-muted">
-                        Nie masz konta? <a class="ml-2" href="{% url 'register' %}">Zarejestruj się!</a>
+                    <small  style="font-size:16px" class=" mt-5 ml-5 text-muted">
+                        Nie masz konta? <a class="ml-2" style="color:#00b2ff;font-size:20px" href="{% url 'register' %}">Zarejestruj się!</a>
                 </form>
                 </div>
             </div>
