--- a/templates/race.html
+++ b/templates/race.html
@@ -30,13 +30,15 @@
             <div class="row mx-auto">
                 <div class="col-md">
 <div class="d-flex justify-content-center">
+  {% if results %}
   <h1 class="mt-5">Wyniki</h1>
+  {% endif %}
   </div> <div class="d-flex justify-content-center">
-  <h4 class="mb-5"> <b> {{ gp.full_name }} </b> </h3>
+  <h4 class="my-5"> <b> {{ gp.full_name }} </b> </h3>
   </div>
 <div class="mt-5 d-flex justify-content-center">
     {% if results %}
-    <table class="table table-bordered" style=" box-shadow: 0 0 10px rgba(0, 0, 0, 0.438);" id="race_table">
+    <table class="table table-bordered"  id="race_table">
 
       <thead>
         <tr>
