--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -2,12 +2,13 @@
 staticfiles %} {% load crispy_forms_tags %} {% block content %}
 
 <div class="container">
-  <div class="d-flex justify-content-center">
-    <h1>Typowanie</h1>
-  </div>
-  <div class="d-flex justify-content-center">
-    <div class="col-sm">
-      <h1>Wyniki</h1>
+<div class="d-flex justify-content-center">
+            <div class="row mx-auto">
+                <div class="col-md-8">
+<div class="d-flex justify-content-center">
+
+      <h1 class=my-5>Wyniki</h1>
+      </div>
       {{ form | crispy }}
       
         
@@ -34,5 +35,10 @@ staticfiles %} {% load crispy_forms_tags %} {% block content %}
     {{ next_race }}
   </div>
 </div>
+  </div>
+</div>
+
+</div>
+
 
 {% endblock %}
