--- a/templates/register.html
+++ b/templates/register.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 <div class="container">
-  <div class="d-flex justify-content-center">
-  <h1>Rejestracja</h1>
+  <div class="mt-5 d-flex justify-content-center">
+  <h1 class="my-5" >Rejestracja</h1>
   </div>
   <div class="d-flex justify-content-center">
   <form method="POST">
