--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -3,12 +3,14 @@ staticfiles %} {% load crispy_forms_tags %} {% block content %}
 
 <div class="container">
 <div class="d-flex justify-content-center">
-            <div class="row mx-auto">
-                <div class="col-md-8">
+
+      <h1 class=my-5>Ranking użytkowników</h1>
+      </div>
 <div class="d-flex justify-content-center">
 
-      <h1 class=my-5>Wyniki</h1>
-      </div>
+            <div class="row mx-auto">
+                <div class="col-md-8">
+
       {{ form | crispy }}
       
         
