--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
 
  </div>
 <div class="imageb mt-5"> </div>
+{% if next_race %}
   <div id="timer" class="flex-wrap d-flex justify-content-center">
 
    <br> Pozostało:
@@ -32,7 +33,8 @@
   </div>
 
   </div>
-</div>
+  {% endif %}
+
   <div class="container pt-5" style="width:60%"; >
    
         <h1 class="d-flex justify-content-center mb-3">Kalendarz <span class="h6"> <i class="fa fa-question-circle" aria-hidden="true" type="button"data-container="body" data-toggle="popover" data-placement="right" data-content="W celu uzyskania wiecej informacji o danym wyścigu, naciśnij jego nazwę w tabeli.">
